# vetour

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: create-sidecar-placeholder.sh  download-sidecar.ts
src/: App.tsx  constants.ts  icons.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_lock.rs  image_processor.rs  lib.rs  main.rs  media_processor.rs
src-tauri/windows/: hooks.nsh
src/components/: ErrorBoundary.tsx  Titlebar.tsx
src/components/Editor/: AssetsView.tsx  EditorLayout.tsx  PSVViewer.tsx  PanoramaPage.tsx  PropertyPanel.tsx  SkeletonEditor.tsx  Toolbar.tsx
src/components/Home/: HomePage.tsx
src/components/Present/: DocumentRenderer.tsx  PresentWindow.tsx
src/components/Settings/: SettingsModal.tsx
src/components/ui/: ColorPickerMenu.tsx  ContextMenu.tsx  GridCard.tsx  Modal.tsx  Select.tsx  Toast.tsx  Tooltip.tsx  button.tsx  dialog.tsx  form.tsx  input.tsx  label.tsx  resizable.tsx  scroll-area.tsx  sheet.tsx  tabs.tsx
src/contexts/: ThemeContext.tsx
src/lib/: deployLoader.ts  fileLock.ts  panorama.ts  presentWindow.ts  useFileWatch.ts  utils.ts  vetourFile.ts
src/store/: projectListStore.ts  toastStore.ts  useTourStore.ts
src/types/: projectEntry.ts  tour.ts
