#-----------------------------------------------------------------------------------------------
#  Copyright (c) Zulfazli (fazelstudio). All rights reserved.
#  Licensed under the MIT License. See LICENSE file in the project root for license information.
#-----------------------------------------------------------------------------------------------

[package]
name = "vetour"
version = "1.0.0"
description = "A cross-platform desktop app for creating and presenting immersive 360° virtual tours"
authors = ["Zulfazli (fazelstudio)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vetour_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-keyring = "0.1.0"
tauri-plugin-shell = "2"
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png", "webp"] }
webp = "0.3.1"
fs2 = "0.4"

[profile.dev]
incremental = true # Compiles faster by caching parts of the program

[profile.release]
panic = "abort" # Menghapus traceback panic, mengurangi ukuran binary
codegen-units = 1 # Kompilasi lebih lambat, tapi ukuran binary jauh lebih kecil dan performa lebih baik
lto = true # Link Time Optimization, sangat signifikan mengecilkan ukuran
opt-level = "s" # Optimasi untuk size (bisa juga "z")
strip = true # Menghapus symbol debug dari binary (sangat mengecilkan ukuran)
